<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ListTableHeaderBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="4dp"
    android:paddingVertical="8dp">
    
    <TextView
        android:id="@+id/tv_position"
        style="@style/ListTableTextView.Colored"
        android:layout_marginStart="4dp"
        android:text="@string/pos"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/tv_team_name"
        style="@style/ListTableTextView.Colored"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="start|center_vertical"
        android:paddingStart="4dp"
        android:text="@string/club"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_played"
        app:layout_constraintStart_toEndOf="@id/tv_position"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />
    
    <TextView
        android:id="@+id/tv_played"
        style="@style/ListTableTextView.Colored"
        android:text="@string/header_played"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_won"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/tv_won"
        style="@style/ListTableTextView.Colored"
        android:text="@string/header_won"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_drawn"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/tv_drawn"
        style="@style/ListTableTextView.Colored"
        android:text="@string/header_drawn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_lost"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/tv_lost"
        style="@style/ListTableTextView.Colored"
        android:text="@string/header_lost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_goal_diff"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/tv_goal_diff"
        style="@style/ListTableTextView.Colored"
        android:text="@string/header_goal_diff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_points"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id="@+id/tv_points"
        style="@style/ListTableTextView.Colored"
        android:text="@string/header_points"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>